<resources>
    <string name="app_name">Cops &amp; caps</string>
    <string name="Clasico">100 palabras en 8 min.</string>
    <string name="MuerteSubita">Muerte Subita.</string>
    <string name="btnEnviar">Siguiente</string>
    <string name="Tip1">Recuerda que las agudas acabadas en -s, -n, o vocal se acentuan.</string>
    <string name="Tip2">Recuerda que debes acentuar las esdrújulas.</string>
    <string name="Tip3">Recuerda diferenciar las v y las b correctamente.</string>
    <string name="Tip4">Recuerda que hay palabras que llevan h y no lo sabes.</string>
    <string name="Tip5">Recuerda leer bien las preguntas.</string>
    <string name="bien">Bien</string>
    <string name="mal">Mal</string>
    <string name="Info">¿Quieres saber en que consiste cada modo?</string>
    <string name="Dudas">¿Tienes dudas con alguna palabra?</string>
    <string name="timer">Tu tiempo es: </string>
    <string name="blanco">No has seleccionado una opcion</string>
    <string name="siguiente">Siguiente</string>
    <string name="felicidad">Felicidades, has completado el test</string>
    <string name="msgPuntuacion">Tu puntuación seria:</string>
    <string name="verErrores">Ver errores</string>
    <string name="Pregunta">"Pregunta: "</string>
    <string name="cienenocho">100 en 8 min</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ciendescripcion">Este modo de juego es una replica del examen de la oposición, tienes 100 minutos para responder a 100 preguntas, puedes marcar BIEN, MAL, o SALTAR, si la saltas, tendras que responerla al final, cuando termines o se acabe el tiempo, se te mostrará la puntuacion y los errores.</string>
    <string name="deadmatch">Muerte Subita</string>
    <string name="deadmatchdescripcion">En este modo de juego tienes 10 vidas, 10 fallos posibles, el objetivo es responder la mayor cantidad de preguntas antes de que te quedes sin vidas, no hay limite de tiempo</string>
    <string name="btnTerminarTest">Fin</string>
    <string name="vidas">Num vidas: </string>
    <string name="msgacierto">¡Palabra Acertada!</string>
    <string name="msgfallo">¡Palabra Fallada!</string>
    <string name="ok">Aceptar</string>
</resources>