<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modosdejuego.deadmatch.Activity_deadmatch">

    <TextView
        android:id="@+id/idNumPreguntaD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:paddingTop="24dp"
        android:textColor="#000000"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/idPreguntaD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/idPreguntaD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:paddingTop="48dp"
        android:paddingBottom="24dp"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447" />

    <RadioGroup
        android:id="@+id/RadioRespuestaD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <RadioButton
            android:id="@+id/radioButtonRespuestaD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="clickOnAnswer"
            android:paddingTop="40dp"
            android:paddingBottom="40dp" />

        <RadioButton
            android:id="@+id/radioButtonRespuesta1D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="clickOnAnswer"
            android:paddingTop="40dp"
            android:paddingBottom="40dp" />


    </RadioGroup>

    <Button
        android:id="@+id/buttonEnviarD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/btnEnviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/RadioRespuestaD"
        app:layout_constraintTop_toBottomOf="@+id/RadioRespuestaD"
        app:layout_constraintVertical_bias="0.824" />

    <TextView
        android:id="@+id/txtvidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vidas"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/idNumPreguntaD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <Button
        android:id="@+id/button2D"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/btnTerminarTest"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEnviarD"
        app:layout_constraintEnd_toEndOf="@+id/RadioRespuestaD"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonEnviarD"
        app:layout_constraintTop_toTopOf="@+id/buttonEnviarD"
        app:layout_constraintVertical_bias="0.518" />

</androidx.constraintlayout.widget.ConstraintLayout>