<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idNumPregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:paddingTop="24dp"
        android:textColor="#000000"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/idPregunta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/idPregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:paddingTop="48dp"
        android:paddingBottom="24dp"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447" />

    <RadioGroup
        android:id="@+id/RadioRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <RadioButton
            android:id="@+id/radioButtonRespuesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="clickOnAnswer"
            android:paddingTop="40dp"
            android:paddingBottom="40dp" />

        <RadioButton
            android:id="@+id/radioButtonRespuesta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="clickOnAnswer"
            android:paddingTop="40dp"
            android:paddingBottom="40dp" />

        <RadioButton
            android:id="@+id/radioButtonRespuesta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="clickOnAnswer"
            android:paddingTop="40dp"
            android:paddingBottom="40dp" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/btnEnviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/RadioRespuesta"
        app:layout_constraintTop_toBottomOf="@+id/RadioRespuesta"
        app:layout_constraintVertical_bias="0.518" />

    <TextView
        android:id="@+id/txtTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/idNumPregunta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/btnTerminarTest"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEnviar"
        app:layout_constraintEnd_toEndOf="@+id/RadioRespuesta"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonEnviar"
        app:layout_constraintTop_toTopOf="@+id/buttonEnviar"
        app:layout_constraintVertical_bias="0.518" />


</androidx.constraintlayout.widget.ConstraintLayout>